[metadata]
name = tinydb-ql
version = 0.0.1
author = Daisuke Takahashi
description = commandline utility for querying a tinydb DB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daitakahashi/tinydb-query

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    jsonschema
    tinydb
[options.entry_points]
console_scripts =
    tinydb-query = tinydb_ql.__main__:main
    tinydb-dump = tinydb_ql.tinydb_dump:main

[options.packages.find]
where=src
